--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.11']
-        poetry-version: ['latest']
+        poetry-version: ['1.7.0']
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -34,7 +34,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.11']
-        poetry-version: ['latest']
+        poetry-version: ['1.7.0']
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -55,7 +55,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.11']
-        poetry-version: ['latest']
+        poetry-version: ['1.7.0']
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
