--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ pymediainfo = "^6.1.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
 pytest-mock = "*"
+pytest-cov = "^4.1.0"
+black = "^23.11.0"
 
 
 [build-system]
